fix: ui layout issues with multi line text areas

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -2112,6 +2112,26 @@ a, img {
             margin-left: 5px;
         }
 
+        .find-what-wrapper-focused {
+            margin-top: 1px;
+            margin-left: 5px;
+            margin-right: 0;
+            outline: 0;
+            text-shadow: none;
+            border: 1px solid @bc-btn-border-focused;
+            border-radius: @bc-border-radius;
+            box-shadow: inset 0 1px 0 @bc-shadow-small, 0 0 0 1px @bc-btn-border-focused-glow;
+            .dark & {
+                margin-top: 0;
+                margin-right: -2px;
+                border: 1px solid @dark-bc-btn-border-focused;
+                box-shadow: inset 0 1px 0 @dark-bc-shadow-small, 0 0 0 1px @dark-bc-btn-border-focused-glow;
+            }
+            #find-what, #find-counter, .dropdown-icon {
+                border: none;
+            }
+        }
+
         .no-results {
             border: 1px solid  @bc-btn-border-error;
             box-shadow: inset 0 1px 0 @bc-shadow-small, 0 0 0 1px @bc-btn-border-error-glow;
